Fixed Spacing and Info message in DL Section, remover card header margin for better looks. Also fixed translation mistake on course edit/general tab.

--- a/app/webFrontend/src/app/course/course-container/course-container.component.scss
+++ b/app/webFrontend/src/app/course/course-container/course-container.component.scss
@@ -12,6 +12,7 @@
 }
 
 .title-header {
+  margin-top: 0.3em;
   display: flex;
   cursor: pointer;
   align-items: center;
